# sorobun-translator

./: .gitignore  Readme.md  config_example.json  main.py  pyproject.toml
rag_db/: catalog.kz  metadata.kz  n-0.hindex  n-0.hindex.ovf  n-1.hindex
src/: config.py  db.py  entry.py  llm.py  process.py  prompt.py  seg.py
