[project]
name = "sorobun-translator"
version = "0.1.0"
description = ""
authors = [
    {name = "kwadraten",email = "ne1hr7s4@addy.to"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
